scrollbar fixing for website

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body {
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
-    overflow-y: auto;
+    overflow-y: scroll;
     max-height: 70vh;
     /* margin: 30px; */
     overflow-x: hidden;
